force-app/main/default/objects/DD_Quote_Plan_Config__c/DD_Quote_Plan_Config__c.object-meta.xml
<CustomObject>
    <description>Agent-configurable plan configuration per quote. Created with defaults from master catalog. AGENTS MODIFY THIS, NOT THE MASTER.</description>
    <label>Quote Plan Config</label>
    <nameField><displayFormat>QPC-{000000}</displayFormat><label>Config ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Quote Plan Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>