force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Config_Status__c.field-meta.xml
<CustomField>
    <fullName>Config_Status__c</fullName>
    <label>Config Status</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>false</default><label>Draft</label></value><value><fullName>Configured</fullName><default>false</default><label>Configured</label></value><value><fullName>Rated</fullName><default>false</default><label>Rated</label></value><value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Declined</fullName><default>false</default><label>Declined</label></value></valueSetDefinition></valueSet>
    <description>Configuration lifecycle status</description>
</CustomField>