force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Contribution_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Dollar__c</fullName>
    <label>Contribution Dollar Amount</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Dollar amount if contribution type is Dollar</description>
</CustomField>