force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Type__c</fullName>
    <label>Contribution Type</label>
    <type>Picklist</type>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Percentage</fullName><default>false</default><label>Percentage</label></value><value><fullName>Dollar Amount</fullName><default>false</default><label>Dollar Amount</label></value></valueSetDefinition></valueSet>
    <description>How contribution is calculated</description>
</CustomField>