force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Custom_Deductible_Family__c.field-meta.xml
<CustomField>
    <fullName>Custom_Deductible_Family__c</fullName>
    <label>Custom Family Deductible</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Override deductible (null=use product default)</description>
</CustomField>