force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/DnP_Waiver_Selected__c.field-meta.xml
<CustomField>
    <fullName>DnP_Waiver_Selected__c</fullName>
    <label>D and P Waiver Selected</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Agent toggled D&P Maximum Waiver</description>
</CustomField>