force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Employer_Contribution_Pct__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contribution_Pct__c</fullName>
    <label>Employer Contribution Pct</label>
    <type>Percent</type>
    <precision>5</precision><scale>0</scale><required>false</required>
    <description>Agent-entered employer contribution</description>
</CustomField>