force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>DD_Product__c</referenceTo><relationshipLabel>Quote Configs</relationshipLabel><relationshipName>Quote_Configs_Prod</relationshipName><required>true</required>
    <description>Master product reference (read-only)</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>