force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <type>Lookup</type>
    <referenceTo>Quote</referenceTo><relationshipLabel>Quote Plan Configs</relationshipLabel><relationshipName>Quote_Plan_Configs</relationshipName><required>true</required>
    <description>Parent quote</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>