force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Rate_Guarantee_Months__c.field-meta.xml
<CustomField>
    <fullName>Rate_Guarantee_Months__c</fullName>
    <label>Rate Guarantee Months</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>12 or 24 month rate guarantee</description>
</CustomField>