force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Selected_Annual_Max__c.field-meta.xml
<CustomField>
    <fullName>Selected_Annual_Max__c</fullName>
    <label>Selected Annual Max</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Agent-selected annual maximum from allowed list</description>
</CustomField>