force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Selected_Ortho_Max__c.field-meta.xml
<CustomField>
    <fullName>Selected_Ortho_Max__c</fullName>
    <label>Selected Ortho Max</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Agent-selected ortho lifetime max</description>
</CustomField>