force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Selected_Ortho_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Ortho_Type__c</fullName>
    <label>Selected Ortho Type</label>
    <type>Picklist</type>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Child Only</fullName><default>false</default><label>Child Only</label></value><value><fullName>Child and Adult</fullName><default>false</default><label>Child and Adult</label></value><value><fullName>None</fullName><default>false</default><label>None</label></value></valueSetDefinition></valueSet>
    <description>Agent-selected ortho option</description>
</CustomField>