force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Selling_Model__c.field-meta.xml
<CustomField>
    <fullName>Selling_Model__c</fullName>
    <label>Selling Model</label>
    <type>Lookup</type>
    <referenceTo>DD_Selling_Model__c</referenceTo><relationshipLabel>Quote Configs</relationshipLabel><relationshipName>Quote_Configs_SM</relationshipName><required>false</required>
    <description>Selling model used for this config</description>
</CustomField>