force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Total_Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Premium__c</fullName>
    <label>Total Monthly Premium</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
    <description>Sum of monthly premium across all enrolled tiers. Stamped by calculateRates.</description>
</CustomField>