force-app/main/default/objects/DD_Quote_Plan_Config__c/fields/Waiting_Period_Waived__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Waived__c</fullName>
    <label>Waiting Period Waived</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Agent flags prior coverage proof provided</description>
</CustomField>