force-app/main/default/objects/DD_Quote_Plan_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>Product__c</columns>
    <columns>Config_Status__c</columns>
    <columns>Selected_Annual_Max__c</columns>
    <columns>Employer_Contribution_Pct__c</columns>
</ListView>